--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -68,9 +68,11 @@
     "@vitejs/plugin-react-swc": "^4.2.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
-    "vite": "^6.0.0"
+    "vite": "^6.0.0",
+    "vite-plugin-compression2": "^2.4.0"
   }
 }
