--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,6 +22,7 @@
     "jose": "^6.0.10",
     "nodemailer": "^7.0.13",
     "postgres": "^3.4.5",
+    "resend": "^6.9.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
