--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,7 +12,8 @@
     "db:migrate": "bun --env-file=.env.development drizzle-kit migrate",
     "db:push": "bun --env-file=.env.development drizzle-kit push",
     "db:studio": "bun --env-file=.env.development drizzle-kit studio",
-    "db:seed": "bun --env-file=.env.development run src/db/seed.ts"
+    "db:seed": "bun --env-file=.env.development run src/db/seed.ts",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.995.0",
