--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -46,10 +46,12 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-push
-    if: ${{ secrets.DOKPLOY_WEBHOOK_URL != '' }}
     steps:
       - name: Trigger Dokploy webhook
+        env:
+          DOKPLOY_WEBHOOK_URL: ${{ secrets.DOKPLOY_WEBHOOK_URL }}
+        if: ${{ env.DOKPLOY_WEBHOOK_URL != '' }}
         run: |
-          curl -s -X POST "${{ secrets.DOKPLOY_WEBHOOK_URL }}" \
+          curl -s -X POST "$DOKPLOY_WEBHOOK_URL" \
             -H "Content-Type: application/json" \
             --fail --max-time 30
